@@ -1595,6 +1595,13 @@ webui.suggest.enable = false
 # webui.controlledvocabulary.enable = true
 
 
+#### Session invalidation #####
+
+# Enable or disable session invalidation upon login or logout.
+# This feature is enabled by default to help prevent session hijacking
+# but may cause problems for shibboleth, etc
+#
+# webui.session.invalidate = true
 
 #---------------------------------------------------------------#
 #--------------XMLUI SPECIFIC CONFIGURATIONS--------------------#
